添加联系方式。

--- a/README
+++ b/README
@@ -38,5 +38,14 @@ Usage:
 5.你可以使用C-xC-e执行上面那句话，也可以重启Emacs来载入sydict。
 这样，你就可以使用sydict-look-up-word命令来查询单词了。
 
+Connect me as follows:
+    Mail: cedsyd@gmail.com
+    QQ  : 38891382
+    IRC : sylvestee
+
+有任何问题和建议，你可以通过以下方式联系我：
+    邮箱： cedsyd@gmail.com
+    QQ ：  328298239
+    IRC：  sylvestee
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
