修改联系方式

--- a/README
+++ b/README
@@ -39,13 +39,13 @@ Usage:
 这样，你就可以使用sydict-look-up-word命令来查询单词了。
 
 Connect me as follows:
-    Mail: cedsyd@gmail.com
-    QQ  : 38891382
-    IRC : sylvestee
+    Mail     : cedsyd@gmail.com
+    QQ       : 38891382
+    Homepage : http://blog.sydi.org/
 
 有任何问题和建议，你可以通过以下方式联系我：
-    邮箱： cedsyd@gmail.com
-    QQ ：  328298239
-    IRC：  sylvestee
+    Mail     : cedsyd@gmail.com
+    QQ       :  328298239
+    Homepage : http://blog.sydi.org/
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
